hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_non_static_member_02.php.legacy_decl.exp
File "protected_non_static_member_02.php", line 29, characters 12-13:
No method 'me' in Tw (did you mean 'foo'?) (Typing[4053])
File "protected_non_static_member_02.php", line 29, characters 5-9:
This is why I think it is an object of type Tw
File "protected_non_static_member_02.php", line 26, characters 7-8:
Declaration of Tw is here
File "protected_non_static_member_02.php", line 38, characters 12-13:
No method 'me' in Tw2 (did you mean 'foo'?) (Typing[4053])
File "protected_non_static_member_02.php", line 38, characters 5-9:
This is why I think it is an object of type Tw2
File "protected_non_static_member_02.php", line 33, characters 7-9:
Declaration of Tw2 is here
